# polybiblioglot

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  README.md  converter.py  main.py  pyproject.toml  requirements.txt  setup.cfg  test.py  translator.py
.github/: FUNDING.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: codeql-analysis.yml  gitlab-sync.yml
polybiblioglot/: __init__.py  polybiblioglot.py
polybiblioglot/components/: __init__.py  converter.py  translator.py
polybiblioglot/lang/: __init__.py
src/: run.py
src/polybiblioglot/: polybiblioglot.py
src/polybiblioglot/components/: translator.py
src/polybiblioglot/lang/: languages.py
