[tool.poetry]
name = "polybiblioglot"
version = "0.1.1"
description = "A tool to translate scanned books"
authors = ["Bruno Robert <bruno.jeanluke@icloud.com>"]
license = "GPLv3"

[tool.poetry.dependencies]
python = "^3.8"
Pillow-PIL = "^0.1dev"
dearpygui = "^0.6.294"
pytesseract = "^0.3.7"
pdf2image = "^1.14.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
