[metadata]
name = polybiblioglot-pkg-brunorobert
version = 0.1.0
url = https://github.com/bruno-robert/polybiblioglot
author = Bruno Robert
author_email = bruno.jeanluke@icloud.com
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU GPLv3
    Operating System :: OS Independent
description = A tool to convert PDFs and images to text and then translate them
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >=3.6