[metadata]
name = polybiblioglot-pkg-brunorobert
version = 0.1.1
author = Bruno Robert
author_email = bruno.jeanluke@icloud.com
url = https://github.com/bruno-robert/polybiblioglot
project_urls =
    Bug Tracker = https://github.com/bruno-robert/polybiblioglot/issues
description = A tool to convert PDFs and images to text and then translate them
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src